add incidenent: show api
